[package]
name = "aoc2021"
version = "0.0.0"
edition = "2021"

[dependencies]
memchr = "2.4"
paste = "1"
criterion = "0.3"
dhat = "0.3"
ahash = "0.7"
either = "1.6"
arrayvec = "0.7"

[dependencies.lexical-core]
version = "0.8"
default-features = false
features = ["parse-integers", "power-of-two"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
